# CrabPot

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: configuration.md  dashboard.md  development.md  egress-protection.md  getting-started.md  monitoring.md  security.md
src/crabpot/: __init__.py  __main__.py  action_gate.py  alerts.py  cli.py  config.py  config_generator.py  dashboard.py  dashboard_html.py  docker_manager.py  egress_policy.py  egress_proxy.py  monitor.py  openclaw_source.py  paths.py  runtime.py  security_presets.py  tui.py  utils.py  wsl2_manager.py
src/crabpot/templates/: Dockerfile.base.j2  Dockerfile.hardened.j2  Dockerfile.j2  docker-compose.yml.j2  egress-allowlist.txt  seccomp-profile.json  wsl2-crabpot.service.j2  wsl2-setup.sh.j2
tests/: test_action_gate.py  test_alerts.py  test_cli.py  test_config.py  test_config_generator.py  test_dashboard.py  test_docker_manager.py  test_egress_policy.py  test_egress_proxy.py  test_monitor.py  test_openclaw_source.py  test_runtime.py  test_security_presets.py  test_utils.py  test_wsl2_manager.py
